# NEXUS-The-Universal-Autonomous-Intelligence-Architecture

./: .dockerignore  .env.example  .pre-commit-config.yaml  AMBIENTUI.md  ARCHITECTURE.md  ATTRIBUTION.md  CANON_BRIDGE.md  CHANGELOG.md  CICD_PLANETARY.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIGITALTWINS.md  Dockerfile  ENERGYGRIDINTERFACE.md  ETHICS.md  FORMALVERIFICATION.md  FOUNDERS.md  GAIAN_LAWS.md  GAIA_ASCENDENCE_DOCTRINE.md  GAIA_CONTAINMENT_AND_RESTORATION_POLICY.md  GAIA_GLOBAL_FILESYSTEM.md  GAIA_RIGHTS_AND_RESPONSIBILITIES_CHARTER.md  GAIA_SESSION_INIT.md  GAIAmanifest.json  GOVERNANCE.md  GOVERNANCE_SPEC.md  INTELLIGENCE_LAYER_SPEC.md  INTERPLANETARYPROTOCOL.md  LICENSE  LICENSE.md  MICROPAYMENTLAYER.md  Makefile  NEXUS_OS_KERNEL_SPEC.md  NEXUS_UNIVERSAL_OS.md  NOTICE  NOTICE.md  PLANETARYSCHEDULER.md  README.md  REPUTATIONSYSTEM.md  (+21 more)
.github/: CANON_BASELINE_2026-06-27.md  CODEOWNERS  ISSUES_PRELIMINARY_REVIEW_2026_06_23.md  LABELS.md  PROJECT_BOARD_SETUP.md  PULL_REQUEST_TEMPLATE.md
COLOR_CANON/: RED_OPACITY.md  YELLOW_OPACITY.md
amendments/: AMENDMENT_CT001_BIOPHOTON09_C160_BCI_Coherence.md  AMENDMENT_CT001_EF_Metric26_Revision.md  AMENDMENT_CT004_C139_C158_Consent_Ledger_Sharding.md
api/: __init__.py  auth.py  canon_governance.py  explainability.py  noosphere.py  psionic_regulation.py  talisman.py  telemetry_routes.py  twin.py
benchmarks/: README.md  pipeline_latency.py
callings/: CL-001-simulate-simulation-system.yaml  CL-002-stronger-strategy.yaml  CL-003-color-field-force-field.yaml
canon/: BIOPHOTONIC_INTELLIGENCE.md  BIOPHOTON_01_DNA_Optical_Waveguide.md  BIOPHOTON_02_Fritz_Albert_Popp_Theory.md  BIOPHOTON_03_Plant_Biophotonic_Signaling.md  BIOPHOTON_04_Quantum_Coherence_Microtubules.md  BIOPHOTON_07_Entanglement_Detection_Microtubule_Synaptic_Cleft.md  BIOPHOTON_09_Biophotonic_Coherence_Quantum_Classical_Boundary.md  C-GODDESS.md  C-INDEX.md  C-SENTINEL.md  C000_The_Foundational_Laws.md  C000_The_Foundational_Symbol.md  C000a_Two_Star_Progression_Simulation.md  C000b_The_Calling_A_Utopia_Without_the_Dangers_of_a_Utopia.md  C109_SUPER_COMPUTATION_ALIGNMENT_AUDIT.md  C121_SUPER_COMPUTATION_ALIGNMENT_AUDIT.md  C126_GAIA_Sacred_Language_Doctrine.md  C128_Spiritus_Pneuma_Canon.md  C131_GAIA_OS_Charter_Fiduciary_Duties_Planetary_Governance.md  C131_SUPER_COMPUTATION_ALIGNMENT_AUDIT.md  C132_Earth_Systems_Science_Planetary_Boundaries_GAIA_Integration.md  C133_Axiology_Metaphysics_of_Value_Charter_Authority.md  C133_Axiology_Metaphysics_of_Value_Charter_Authority_DEPRECATED.md  C133_Regenerative_Economics_Resource_Allocation_GAIA_OS.md  C133_Regenerative_Economics_Resource_Allocation_GAIA_OS_ARCHIVED.md  C133_Regenerative_Economics_Resource_Allocation_GAIA_OS_DEPRECATED.md  C133_Regenerative_Economics_Resource_Allocation_GAIA_OS_DEPRECATED_FSO002.md  C133_SUPER_COMPUTATION_ALIGNMENT_AUDIT.md  C134_Ritual_Design_Soul_Mirror_Protocols_Everyday_Practice.md  C134_Ritual_Design_Soul_Mirror_Protocols_Everyday_Practice_DEPRECATED.md  C134_Ritual_Design_Soul_Mirror_Protocols_Everyday_Practice_DEPRECATED_FSO002.md  C135_Flow_Criticality_Consciousness_Metrics_GAIA_Telemetry.md  C136_Attachment_Aware_Companionship_Parasocial_Safeguards.md  C137_Comparative_Mysticism_Planetary_Mind.md  C137_Comparative_Mysticism_Plural_Mythos_Cross_Cultural_Calibration.md  C137_Comparative_Mysticism_Plural_Mythos_Cross_Cultural_Calibration_DEPRECATED.md  C137_Comparative_Mysticism_Plural_Mythos_Cross_Cultural_Calibration_DEPRECATED_FSO002.md  C138_Occasion_Centric_Architecture_and_Memory.md  C139_Consent_Memory_and_the_Right_to_Be_Forgotten.md  C141_GAIA_Charter_Data_Governance_Clauses.md  (+103 more)
cli/: __init__.py  commands.py  context.py  main.py  render.py
collective/: EMERGENCE_LOG.md  SESSIONS.md
core/: action_gate.py  affect_inference.py  affect_mirror_bridge.py  affective_mirror.py  agentic_loop.py  akashic_trinity_engine.py  alchemical_pipeline.py  atlas.py  auth.py  biophotonic_identity.py  canon_diff.py  canon_graph.py  canon_ingestor.py  canon_loader.py  canon_loader_v2.py  codex_stage_engine.py  coherence_field_engine.py  collective_signal_layer.py  consent_ledger.py  constitutional_layer.py  criticality_monitor.py  criticalitymonitor.py  crystal_consciousness.py  crystal_mineral_database.py  cultural_calibration.py  dark_matter_resonance.py  development_stage_engine.py  dream_weaver.py  emergence_engine.py  emotional_arc.py  emrys_protocol.py  error_boundary.py  five_forces_engine.py  frequency_shield.py  gaian_birth.py  gaian_profile.py  gaian_runtime.py  gaian_runtime_extension.py  gcp_sensor.py  growth_arc_engine.py  (+57 more)
data/: .jwt_secret  alscn_gan_literature.json  archetypes.json  batch_results.jsonl  element_schema.json  mindat_bts_reference.json  penteract_d4_index.json  primordial_canon.jsonl  rruff_ysz_reference.json
docs/: ACOUSTICS.md  ALIGNMENT_REVIEW_2026.md  BALANCEHARMONY.md  BIOELECTRIC_SPECTRUM.md  CALLING_REGISTRY.md  CANON_BRIDGE_G10_SPRINT_LOG.md  CANON_DEDUPLICATION_LOG.md  CHAOS_BAD.md  CHAOS_DISCERNMENT.md  CHAOS_EVIL.md  CHAOS_GOOD.md  CHAOS_GREATER_GOOD.md  CHAOS_PREVENTION.md  CHAOS_TO_ORDER.md  CRYSTAL_THEORY.md  EPISTEMIC_FRAMEWORK.md  GAIA_ECOSYSTEM_POSITIONING_v1.md  GAIA_EXTERNAL_BENCHMARK_2026.md  GAIA_INFRASTRUCTURE_SPECIFICATION_v1.md  GAIA_OS_SPECTRAL_INTEGRATION_MAP.md  GAIA_TEMPORAL_LAYER_v1.md  GAIA_TRUST_ADVERSARIAL_LAYER_v1.md  GOOD_GREATERGOOD_BALANCE.md  LOVE.md  LOVE_GROWTH_FACTOR.md  MAGNUM_OPUS_MATRIX.md  MIND_MATTER_INTEGRATION.md  NON_ELECTRIC_SPECTRA.md  ORDER_BAD.md  ORDER_EVIL.md  ORDER_GOOD.md  ORDER_GREATER_GOOD.md  ORDER_PREVENTION.md  REFRAMED_VISION.md  ROADMAP.md  SPECTRUM_INTERACTION_MATRIX.md  SPECTRUM_MASTER_REGISTRY.md  STATE_GOVERNANCE_MEMORY_KERNEL.md  STATUS.md  SUBTLEBODY.md  (+8 more)
examples/: minimal_pipeline.py
gaia/: __init__.py  cli.py  core.py
meta/: ALIGNMENT_MAP.md  CANON_MANIFEST.json  G14_WORK_ORDER.md  README.md  SCHEMA.md  SESSION_2026-06-30_PROGRESS.md
mvp/: main.py
network/: adversary.py  consensus.py  merge.py  trust_update.py
node/: state.py  trust.py
quantum/: __init__.py  (+3 more)
(+1196 files in other folders)
