[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gaia-core"
version = "0.2.0"
description = "GAIA: The Autonomous Intelligence Architecture — Epistemic World Model OS"
authors = [
    {name = "R0GV3 The Alchemist", email = "xxkylesteenxx@outlook.com"}
]
readme = "README.md"
license = {text = "All Rights Reserved — © 2026 Kyle Steen"}
requires-python = ">=3.11"
keywords = ["epistemic", "world-model", "AI", "ontology", "knowledge-graph", "GAIA"]

[project.urls]
"Repository" = "https://github.com/R0GV3TheAlchemist/GAIA-The-Global-Autonomous-Intelligence-Architecture"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
# Discover tests in all four locations:
#   tests/                          — root integration suite
#   server/tests/                   — API + dashboard tests (89 tests)
#   core/primordial/tests/          — session hook tests (34 tests)
#   core/persistence/tests/         — persistence tests
testpaths = [
    "tests",
    "server/tests",
    "core/primordial/tests",
    "core/persistence/tests",
]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Short tracebacks in CI; override with -v locally
addopts = "--tb=short -q"
# Treat unknown marks as errors to prevent silent typos
strict_markers = true

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "alembic",
    "node_modules",
    "src-tauri",
    "ui",
    "client",
    "src",
    ".venv",
    "__pycache__",
    # Simulation scratch files — not production code, high violation density
    "simulation",
    "src-python",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    # Line too long — handled by formatter
    "E501",
    # Module-level import not at top of file — common in lazy-load patterns
    "E402",
    # Do not perform function call in default argument — FastAPI pattern
    "B008",
    # Use `X | Y` instead of `Optional[X]` — suppressed for pre-existing code
    "UP007",
    # Use `X | Y` for union types — suppressed for pre-existing code
    "UP035",
    # raise without `from` inside except — pre-existing; fix incrementally
    "B904",
    # Multiple statements on one line (semicolons) — pre-existing sim files
    "E702",
    # Statement ends with a semicolon
    "E703",
    # Local variable assigned but never used — pre-existing; fix incrementally
    "F841",
    # Import block unsorted — auto-fixable but suppressed to avoid noisy diffs
    "I001",
    # Suppress all UP (pyupgrade) hints on pre-existing code
    # New code in gaia/ and server/ is written to modern style already
    "UP",
]

# Per-file ignores for test files — allow assert, unused imports, etc.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "S101"]
"**/tests/**" = ["F401", "F811", "S101"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source   = ["core", "server"]
branch   = true
omit     = [
    "*/tests/*",
    "*/conftest.py",
    "alembic/*",
]

[tool.coverage.report]
show_missing        = true
skip_covered        = true
fail_under          = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    '\.\.\.', 
]
