[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gaia-core"
version = "0.2.0"
description = "GAIA: The Autonomous Intelligence Architecture — Epistemic World Model OS"
authors = [
    {name = "R0GV3 The Alchemist", email = "xxkylesteenxx@outlook.com"}
]
readme = "README.md"
license = {text = "All Rights Reserved — © 2026 Kyle Steen"}
requires-python = ">=3.11"
keywords = ["epistemic", "world-model", "AI", "ontology", "knowledge-graph", "GAIA"]

[project.urls]
"Repository" = "https://github.com/R0GV3TheAlchemist/GAIA-The-Global-Autonomous-Intelligence-Architecture"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "server/tests",
    "core/primordial/tests",
    "core/persistence/tests",
]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
strict_markers = true

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "alembic",
    "node_modules",
    "src-tauri",
    "ui",
    "client",
    "src",
    ".venv",
    "__pycache__",
    "simulation",
    "src-python",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    # --- Formatter concerns ---
    "E501",   # line too long
    # --- Common patterns in GAIA codebase ---
    "E402",   # module-level import not at top
    "E701",   # multiple statements on one line (if x: return x guard style)
    "E702",   # multiple statements on one line (semicolons)
    "E703",   # statement ends with semicolon
    "E731",   # lambda assigned to variable
    "E741",   # ambiguous variable name (l, I, O)
    # --- Bugbear style preferences ---
    "B007",   # unused loop control variable
    "B008",   # function call in default argument (FastAPI pattern)
    "B028",   # warnings.warn missing stacklevel
    "B904",   # raise without from inside except
    "B905",   # zip() without strict=
    # --- Pre-existing code suppressed ---
    "F401",   # imported but unused (suppressed globally; per-file below handles tests)
    "F811",   # redefinition of unused name
    "F841",   # local variable assigned but never used
    # --- Pyupgrade hints suppressed for pre-existing code ---
    "UP",
    "UP007",
    "UP035",
    # --- Import sorting (auto-fixable but noisy diffs) ---
    "I001",
]

[tool.ruff.lint.per-file-ignores]
# Test files
"tests/**"         = ["F401", "F811", "F821", "S101", "E741", "B007", "B905"]
"**/tests/**"      = ["F401", "F811", "F821", "S101", "E741", "B007", "B905"]
# Research / simulation / script files — not production code
"simulations/**"   = ["F", "E", "B", "W"]
"docs/**"          = ["F", "E", "B", "W"]
"research/**"      = ["F", "E", "B", "W"]
"scripts/**"       = ["F", "E", "B", "W"]
"node/**"          = ["F", "E", "B", "W"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source   = ["core", "server"]
branch   = true
omit     = [
    "*/tests/*",
    "*/conftest.py",
    "alembic/*",
]

[tool.coverage.report]
show_missing        = true
skip_covered        = true
fail_under          = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    '\.\.\.', 
]
