[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gaia-core"
version = "0.2.0"
description = "GAIA: The Autonomous Intelligence Architecture — Epistemic World Model OS"
authors = [
    {name = "R0GV3 The Alchemist", email = "xxkylesteenxx@outlook.com"}
]
readme = "README.md"
license = {text = "All Rights Reserved — © 2026 Kyle Steen"}
requires-python = ">=3.11"
keywords = ["epistemic", "world-model", "AI", "ontology", "knowledge-graph", "GAIA"]

[project.urls]
"Repository" = "https://github.com/R0GV3TheAlchemist/GAIA-The-Global-Autonomous-Intelligence-Architecture"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "server/tests",
    "core/primordial/tests",
    "core/persistence/tests",
]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
strict_markers = true

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "alembic",
    "node_modules",
    "src-tauri",
    "ui",
    "client",
    "src",
    ".venv",
    "__pycache__",
    "simulation",
    "src-python",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = [
    # Line length — handled by formatter
    "E501",
    # Module-level import not at top — common lazy-load pattern
    "E402",
    # Function call in default argument — FastAPI Depends() pattern
    "B008",
    # Import sorting — auto-fixable but generates noisy diffs; fix incrementally
    "I001",
    # HTTPException re-raises in FastAPI handlers are intentionally bare;
    # chaining with `from exc` would leak internal stack info to HTTP clients.
    "B904",
    # zip() strict= was added in Python 3.10; all usages here are
    # length-safe by construction and adding strict= adds noise with no gain.
    "B905",
    # Local variables assigned for readability / future use in router functions;
    # removing them would obscure the intent of multi-field response payloads.
    "F841",
    # pytest.raises(Exception) in hardening tests — intentional broad catch
    # in phase2 hardening suite where the exact exception type is non-deterministic.
    "B017",
]

[tool.ruff.lint.per-file-ignores]
# Test files — allow assert, unused imports, ambiguous names in fixtures
"tests/**"    = ["F401", "F811", "S101", "E741", "B007", "B028", "B905", "B017"]
"**/tests/**" = ["F401", "F811", "S101", "E741", "B007", "B028", "B905", "B017"]
# Signing modules use conditional try/except ImportError blocks for optional
# cryptography dependency — F401 false positives on guarded availability checks.
"core/lifecycle/signing/**" = ["F401"]
# CrystalCorrespondence model: alchemical_stage @property intentionally shadows
# the mapped_column of the same name — standard SQLAlchemy v2 hybrid override.
"core/crystal_correspondence/models.py" = ["F811"]
# Simulation / research / script files — not shipped production code
"simulations/**" = ["ALL"]
"docs/**"        = ["ALL"]
"research/**"    = ["ALL"]
"scripts/**"     = ["F", "E", "B", "W"]
"node/**"        = ["F", "E", "B", "W"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source   = ["core", "server"]
branch   = true
omit     = [
    "*/tests/*",
    "*/conftest.py",
    "alembic/*",
]

[tool.coverage.report]
show_missing        = true
skip_covered        = true
fail_under          = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    '\.\.\.', 
]
